# WhatIf_WorldBuilder

./: README.md  pyproject.toml  sample_chapters.json
src/worldbuilder/llm/: openai_async.py
src/worldbuilder/pipelines/: __main__.py  alias_cluster.py  candidate_extractor.py  candidate_filter.py  entity_pipeline.py  llm_classifier.py
src/worldbuilder/utils/: schema.py  sim.py  text.py
tests/: test_alias_cluster.py  test_candidate_filter.py  test_llm_schema.py
